force-app/main/default/objects/Relationship_Lookup__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this reciprocal lookup is active.</description>
    <inlineHelpText>Indicates if this reciprocal lookup is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>