force-app/main/default/objects/Relationship_Lookup__c/fields/Female__c.field-meta.xml
<CustomField>
    <fullName>Female__c</fullName>
    <description>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Female gender.</description>
    <inlineHelpText>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Female gender.</inlineHelpText>
    <label>Female</label>
    <length>255</length>
    <type>Text</type>
</CustomField>