force-app/main/default/objects/Relationship_Lookup__c/fields/Male__c.field-meta.xml
<CustomField>
    <fullName>Male__c</fullName>
    <description>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Male gender.</description>
    <inlineHelpText>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Male gender.</inlineHelpText>
    <label>Male</label>
    <length>255</length>
    <type>Text</type>
</CustomField>