force-app/main/default/objects/Relationship_Lookup__c/fields/Neutral__c.field-meta.xml
<CustomField>
    <fullName>Neutral__c</fullName>
    <description>The value used if the Contact&apos;s Gender and Saluation fields don&apos;t indicate gender.</description>
    <inlineHelpText>The value used if the Contact&apos;s Gender and Saluation fields don&apos;t indicate gender.</inlineHelpText>
    <label>Neutral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>